[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/sprites/ship-sheet.png" type="Texture" id=1]
[ext_resource path="res://src/prefabs/game-elements/Ship.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/ship-destroy-anim.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/shipwreck-sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/water-particle.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/explosionwhistledownv4.wav" type="AudioStream" id=6]
[ext_resource path="res://src/prefabs/game-elements/ShipHitDestParticles.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/boatengineputterbitcrushv3.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sprites/light.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 540, 180, 180, 180 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 360, 180, 180 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 360, 180, 180 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.213523, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=27]
offsets = PoolRealArray( 0, 0.457364, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.931504, 0.978328, 1, 1, 0.192157, 0.635294, 0.94902, 1 )

[sub_resource type="Curve" id=28]
_data = [ Vector2( 0.00711744, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.75089, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Ship" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )
onHitDestIslandParticles = ExtResource( 7 )

[node name="DeadSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 25 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.313726 )
position = Vector2( 1.3113e-06, 16 )
scale = Vector2( 0.0375, 0.0140625 )
texture = ExtResource( 9 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 19 )
speed_scale = 3.0

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 18 )
amount = 5
texture = ExtResource( 5 )
direction = Vector2( -1, 0 )
spread = 8.27
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 0.3
scale_amount_curve = SubResource( 26 )
color_ramp = SubResource( 27 )

[node name="ExplosionSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="OnAccept" type="CPUParticles2D" parent="."]
visible = false
amount = 60
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 5 )
direction = Vector2( 20, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 163.21
scale_amount = 0.8
scale_amount_curve = SubResource( 28 )

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0
autoplay = true
bus = "Sound"

[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
